@@ -98,6 +98,9 @@ configurator, but this is fixed.
 Correct alphabetic ordering of menu-entries is done. Previously they
 were sorted [A-Z][a-z] (first all upper- then all loser-case entries).
 
+Also the function for detecting the language has been improved. It
+now better follows the freedesktop.org specification.
+
 @item Edge-flip now still works after resolution-change. [Christopher Bratusek]
 
 @item Sawfish now starts up correctly when receiving a session-id or
