@@ -1,6 +1,10 @@
 2010-08-21  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/cfg/shell.jl: improved look of the error-dialog
 
+	* lisp/sawfish/wm/ext/apps-menu.jl: improved the way the apps-menu
+	detected the language to use. It now better follows the fdo spec
+	-- [Matthew Love]
+
 2010-08-21  Teika kazura <teika@lavabit.com>
 	* README.IMPORTANT
 	* lisp/sawfish/wm.jl
